[gd_scene load_steps=11 format=3]

[ext_resource type="Script" path="res://Main.gd" id="1_main_script"]
[ext_resource type="Script" path="res://Arena.gd" id="2_arena_script"]
[ext_resource type="Script" path="res://GameManager.gd" id="3_game_manager_script"]
[ext_resource type="PackedScene" path="res://Player.tscn" id="4_player_scene"]
[ext_resource type="Script" path="res://CameraRef.gd" id="5_camera_script"]
[ext_resource type="Script" path="res://HUD.gd" id="6_hud_script"]
[ext_resource type="Script" path="res://PowerupSpawner.gd" id="7_powerup_spawner_script"]
[ext_resource type="PackedScene" path="res://Powerup.tscn" id="8_powerup_scene"]
[ext_resource type="PackedScene" path="res://Portal.tscn" id="9_portal_scene"]
[ext_resource type="Script" path="res://RuntimeMenu.gd" id="10_runtime_menu_script"]

[node name="Main" type="Node"]
script = ExtResource("1_main_script")

[node name="World" type="Node3D" parent="."]

[node name="Arena" type="Node3D" parent="World"]
script = ExtResource("2_arena_script")
portal_scene = ExtResource("9_portal_scene")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(0.965926, -0.258819, -0.0, 0.198267, 0.739942, -0.642788, 0.166366, 0.620885, 0.766044, 0, 50, 0)
light_energy = 2.0

[node name="Camera3D" type="Camera3D" parent="World"]
script = ExtResource("5_camera_script")
current = true
fov = 75.0

[node name="PowerupSpawner" type="Node3D" parent="World"]
script = ExtResource("7_powerup_spawner_script")
powerup_scene = ExtResource("8_powerup_scene")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_game_manager_script")
player_scene = ExtResource("4_player_scene")
arena_node = NodePath("../World")

[node name="HUD" type="Control" parent="."]
script = ExtResource("6_hud_script")
game_manager = NodePath("../GameManager")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RuntimeMenu" type="CanvasLayer" parent="."]
script = ExtResource("10_runtime_menu_script")
